# Tidder

client/: .env.example  package-lock.json  package.json  svelte.config.js  tailwind.config.js
client/src/: app.css  app.d.ts  hooks.server.ts
client/src/lib/components/: Comment.svelte  KebabMenu.svelte  Navbar.svelte  PostPreview.svelte  Search.svelte  ShowAllButton.svelte  SignupModal.svelte
client/src/lib/server/: Pubkey.ts
client/src/lib/util/: rest.ts  types.ts
client/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  +page.ts
client/src/routes/(protected)/account/: +page.svelte  +page.ts
client/src/routes/(protected)/submit/: +page.svelte  +page.ts
client/src/routes/(public)/s/: +page.server.ts
client/src/routes/(public)/s/[category_id]/: +page.svelte  +page.ts
client/src/routes/(public)/s/[category_id]/[post_id]/: +page.svelte  +page.ts
client/static/.well-known/: security.txt
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
server/src/: main.rs
server/src/controller/: auth.rs  avatar.rs  category.rs  comment.rs  mod.rs  post.rs  search.rs  user.rs
server/src/model/: api.rs  data.rs
server/src/security/keystore/: README.md
server/src/service/: database.rs  elastic.rs  mod.rs  security.rs
server/src/utils/: convert.rs  form_validation.rs  mod.rs  sanitize.rs
