[package]
name = "tidder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.162"
serde_json = "1.0.96"
serde_derive = "1.0.162"
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"]}
elasticsearch = "8.5.0-alpha.1"
url = "2.3.1"
base64 = "0.21.0"
regex = "1.8.1"
bcrypt = "0.14.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
uuid = { version="1.3.2", features = ["v4"] }
comrak = "0.18.0"
image = "0.24.6"
dotenv = "0.15.0"
